# Minigrid

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.html  CITATION.cff  CNAME  CODE_OF_CONDUCT.rst  DML_p=1.0.csv  DML_p=1.0.pickle  Dockerfile  LICENSE  README.md  TTC Model.ipynb  TTC.csv  TTC2.csv  benchmark.py  build.sh  convertNewPickle.py  convertPickle.py  environment.yaml  exploration.ipynb  index.html  interspersed_p=0.5.csv  interspersed_p=0.5.pickle  interspersed_p=1.0.csv  interspersed_p=1.0.pickle  manual_control.py  manual_control_matplotlib.py  newInterspersed_p=1.0.csv  newInterspersed_p=1.0.pickle  objects.inv  printPickle.py  py.Dockerfile  pyproject.toml  pytest.ini  requirements.txt  rl_ex_results.sh  rl_ex_run.sh  (+37 more)
README/: index.html
_modules/: index.html
_static/: documentation_options.js
basicrl/: enjoy.py  envs.py  main.py  record_video.py
docs/: .buildinfo  .gitignore  LICENSE  README.md  conf.py  dev-guide.md  index.md  index.rst  make.bat  release_notes.md  requirements.txt
documentation/: Development Plan.pptx  minigrid-basics.md
environments/: index.html
genindex/: index.html
gym_minigrid/: __init__.py  babaisyou.py  benchmark.py  envelopes.py  manual_control.py  minigrid.py  oracle_agent.py  register.py  rendering.py  roomgrid.py  rule.py  window.py  wrappers.py
main/: .buildinfo  404.html  index.html  objects.inv  searchindex.js
minigrid/: __init__.py  benchmark.py  manual_control.py  minigrid.py  minigrid_env.py  roomgrid.py  rule.py  wrappers.py
notebooks/: test_multi_notebook.ipynb
numpyworldfiles/: map000.npy  map001.npy  map002.npy  map003.npy
outputs/: pedVStime1000steps.csv  pedVStime100steps.csv
pedgrid/: __init__.py  minigrid.py  window.py
pytorch-rl/: arguments.py  envs.py  main.py  requirements.txt
pytorch_rl/: arguments.py  enjoy.py  envs.py  main.py  model.py  requirements.txt  utils.py  visualize.py
release_notes/: index.html
run-docs-locally/: .buildinfo  dev-guide.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  user-guide.html
scripts/: benchmark.py  manual_control.py  printPickle.py  run_tests.py  scaling_peds.py  sys_path_hack.py  test-DML.py  test-StopGoModel.py  test-TTCModel.py  test-TwoLaneRoadEnv.py  test-interspersed.py  test-multi-pedestrian.py  test2-TwoLaneRoadEnv.py  test_benchmark.py  test_interactive_mode.py  test_lanechange.py  test_small_scale.py  tutorial.py  tutorial1-docs.py
search/: index.html
tests/: test-TwoLaneRoadEnv.py  test_babaisyou.py  test_baby_ai_bot.py  test_bot.py  test_envs.py  test_obstructed_maze.py  test_scripts.py  test_single_lane.py  test_wrappers.py  utils.py
v2.2.0/: .buildinfo
v2.2.1/: .buildinfo  index.html  objects.inv  searchindex.js
v2.3.0/: 404.html
v2.3.1/: .buildinfo  404.html
(+835 files in other folders)
